Crash when rendering a text object with a remesh modifier and a material texture #35335

Closed
opened 2013-05-13 05:50:04 +02:00 by Yu Asakusa · 4 comments

%%%--- Operating System, Graphics card ---
Windows 7 64-bit Service Pack 1, Mobile Intel 4 Series Express Chipset

- Blender version with error, and version that worked ---

Error:

  1. Either open the attached remesh.blend file or do the following steps 1a–1h.
    1a. Load the factory settings.
    1b. Delete the default cube.
    1c. Add a text object.
    1d. Enter Edit mode, and edit the text to single letter “g”. Exit Edit mode.
    1e. Go to the Object Data pane. In the Geometry section, change Extrude to 0.2.
    1f. Go to the Object Modifiers pane. Add Remesh modifier, and change Octree Depth to 5.
    1g. Go to the Materials pane. Click New to add a material.
    1h. Go to the Texture pane. Click New to add a texture to the material.
  2. Render. Blender crashes.

Remarks

  • The crash is 100% reproducible with the aforementioned steps on my computer.
  • I cannot test on other computers than this one. Excuse me if this turns out to be an issue with the device driver.
  • Blender renders the scene without problem if the aforementioned steps are modified in any of the following ways (only tested with Blender 2.67).
    (i) Convert the text object to a mesh (Alt+C) between steps 1e and 1f.
    (ii) Convert the text object to a mesh (Alt+C) before step 2 (which also applies the modifier).
    (iii) Do not change Octree Depth from its default value 4 in step 1f.
    %%%
%%%--- Operating System, Graphics card --- Windows 7 64-bit Service Pack 1, Mobile Intel 4 Series Express Chipset - Blender version with error, and version that worked --- Error: * Blender 2.66a 64-bit (http://download.blender.org/release/Blender2.66/blender-2.66a-windows64.zip) * Blender 2.67 64-bit (official binary) * Blender r56693 64-bit (http://builder.blender.org/download/blender-2.67-r56693-win64.zip) Working: none I know of - Short description of error --- Rendering a scene which contains a text object with a remesh modifier and a material texture causes Blender to crash, apparently depending on some details of the text object and the remesh modifier. - Steps for others to reproduce the error (preferably based on attached .blend file) --- 1. Either open the attached remesh.blend file or do the following steps 1a–1h. 1a. Load the factory settings. 1b. Delete the default cube. 1c. Add a text object. 1d. Enter Edit mode, and edit the text to single letter “g”. Exit Edit mode. 1e. Go to the Object Data pane. In the Geometry section, change Extrude to 0.2. 1f. Go to the Object Modifiers pane. Add Remesh modifier, and change Octree Depth to 5. 1g. Go to the Materials pane. Click New to add a material. 1h. Go to the Texture pane. Click New to add a texture to the material. 2. Render. Blender crashes. Remarks * The crash is 100% reproducible with the aforementioned steps on my computer. * I cannot test on other computers than this one. Excuse me if this turns out to be an issue with the device driver. * Blender renders the scene without problem if the aforementioned steps are modified in any of the following ways (only tested with Blender 2.67). (i) Convert the text object to a mesh (Alt+C) between steps 1e and 1f. (ii) Convert the text object to a mesh (Alt+C) before step 2 (which also applies the modifier). (iii) Do not change Octree Depth from its default value 4 in step 1f. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%fixed r56749.%%%

%%%fixed r56749.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

%%%I verified it was fixed in http://builder.blender.org/download/blender-2.67-r56782-win64.zip.%%%

%%%I verified it was fixed in http://builder.blender.org/download/blender-2.67-r56782-win64.zip.%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35335
No description provided.