fix [#35335] Crash when rendering a text object with a remesh modifier and a material texture